tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/bool_as_index/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic_errors/typecheck/bool_as_index/bool_as_index.essence:3:13:
  |
3 | such that m[b] = 5
  |             ^
Type error: Boolean variable 'b' cannot be used in arithmetic context

tests/roundtrip/invalid/semantic_errors/typecheck/bool_as_index/bool_as_index.essence:4:13:
  |
4 | such that m[b,2] = [5, 4]
  |             ^
Type error: Boolean variable 'b' cannot be used in arithmetic context